examples: Add config files
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -19,11 +19,11 @@ debug=0
 ; PHY protocol layer configuration
 [PHY]
 ; The PHY layer driver type.
-type=serial
+type=dummy_slave
 
 ; The PHY device name/path.
 ; Can be a device like /dev/ttyS0 or /dev/ttyAMA0 for 'serial'.
-dev=/dev/ttyS0
+;dev=/dev/ttyS0
 
 ; The Profibus on-wire baud rate.
 baud=19200
@@ -53,7 +53,7 @@ master_addr=2
 addr=8
 
 ; The path to the GSD file.
-gsd=si03806a.gse
+gsd=dummy.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
@@ -72,10 +72,9 @@ watchdog_ms=300
 ; entry with the name of the module.
 ; The module name must match the name from the GSD file (approximately).
 ; The modules are used in the order of the index number.
-module_0=6ES7 138-4CA01-0AA0 PM-E DC24V
-module_1=6ES7 132-4BB30-0AA0  2DO DC24V
-module_2=6ES7 132-4BB30-0AA0  2DO DC24V
-module_3=6ES7 131-4BD01-0AA0  4DI DC24V
+module_0=dummy output module
+module_1=dummy output module
+module_2=dummy input module
 
 ; The number of output bytes this slave transmits to the
 ; master in Data_Exchange.
@@ -85,4 +84,4 @@ output_size=2
 ; The number of input bytes this slave expects to receive
 ; in Data_Exchange.
 ; This usually depends on the modules plugged into the slave.
-input_size=1
+input_size=2
