example_dummy: Extend to two slaves
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -85,3 +85,44 @@ output_size=2
 ; in Data_Exchange.
 ; This usually depends on the modules plugged into the slave.
 input_size=2
+
+
+
+; Second slave configuration
+[SLAVE_1]
+; This slave's Profibus address
+addr=42
+
+; The path to the GSD file.
+gsd=dummy.gsd
+
+; Boolean: Sync mode enabled/available?
+sync_mode=1
+
+; Boolean: Freeze mode enabled/available?
+freeze_mode=1
+
+; 8 bit integer specifying the Profibus group ident mask.
+group_mask=1
+
+; This slave's watchdog timeout, in milliseconds.
+watchdog_ms=300
+
+; Module configuration.
+; For each module plugged into the slave, add a module_xxx
+; entry with the name of the module.
+; The module name must match the name from the GSD file (approximately).
+; The modules are used in the order of the index number.
+module_0=dummy output module
+module_1=dummy output module
+module_2=dummy input module
+
+; The number of output bytes this slave transmits to the
+; master in Data_Exchange.
+; This usually depends on the modules plugged into the slave.
+output_size=2
+
+; The number of input bytes this slave expects to receive
+; in Data_Exchange.
+; This usually depends on the modules plugged into the slave.
+input_size=2
