examples: Add flow control to all configs
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -28,6 +28,10 @@ type=dummy_slave
 ; The Profibus on-wire baud rate.
 baud=19200
 
+; Serial line flow control and handshaking
+rtscts=False
+dsrdtr=False
+
 
 ; FDL protocol layer configuration
 [FDL]
