--- a/example_et200s.conf
+++ b/example_et200s.conf
@@ -28,6 +28,10 @@ dev=/dev/ttyS0
 ; The Profibus on-wire baud rate.
 baud=19200
 
+; Serial line flow control and handshaking
+rtscts=False
+dsrdtr=False
+
 
 ; FDL protocol layer configuration
 [FDL]
