fpga: Add basic support for other targets
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/phy_fpga/Makefile
+++ b/phy_fpga/Makefile
@@ -1,3 +1,5 @@
+TARGET		:= tinyfpga_bx
+
 NAME		:= pyprofibus_fpga_phy
 
 YOSYS		:= yosys
@@ -12,14 +14,22 @@ ECHO		:= echo
 RM		:= rm
 FALSE		:= false
 
-YOSYS_SYNTH	:= synth_ice40
+TARGET_LOWER	:= $(shell printf '%s' '$(TARGET)' | tr A-Z a-z)
+TARGET_UPPER	:= $(shell printf '%s' '$(TARGET)' | tr a-z A-Z)
+
+TOP_FILE	:= main.v
+TOP_MODULE	:= top_module
+PCF_FILE	:= $(TARGET_LOWER).pcf
+GENERATED_V	:= crc8_func.v
+
+ifeq ($(TARGET_LOWER),tinyfpga_bx)
+YOSYS_SYNTH_CMD	= 'synth_ice40 -top $(TOP_MODULE) -json $(patsubst %.blif,%.json,$@) -blif $@'
 PNR_PACKAGE	:= cm81
 NEXTPNR_ARCH	:= ice40
 DEVICE		:= lp8k
-TOP_FILE	:= main.v
-TOP_MODULE	:= top_module
-PCF_FILE	:= tinyfpga_bx.pcf
-GENERATED_V	:= crc8_func.v
+else
+$(error TARGET $(TARGET) is invalid)
+endif
 
 YOSYS_LOG	:= yosys.log
 NEXTPNR_LOG	:= nextpnr.log
@@ -34,16 +44,20 @@ crc8_func.v: crcgen.py
 	$(PYTHON) crcgen.py --nr-bits 8 --polynomial 7 --verilog-function --name crc8 > $@
 
 %.blif: $(TOP_FILE) $(wildcard *.v) $(GENERATED_V)
-	$(YOSYS) -p '$(YOSYS_SYNTH) -top $(TOP_MODULE) -json $(patsubst %.blif,%.json,$@) -blif $@' $< $(call LOG,$(YOSYS_LOG))
+	$(YOSYS) -p 'read_verilog -DTARGET_$(TARGET_UPPER)=1 $<' \
+		-p $(YOSYS_SYNTH_CMD) \
+		$(call LOG,$(YOSYS_LOG))
 
 %.asc: $(PCF_FILE) %.blif
-	$(NEXTPNR)-$(NEXTPNR_ARCH) --$(DEVICE) --package $(PNR_PACKAGE) --json $(NAME).json --pcf $< --asc $@ $(call LOG,$(NEXTPNR_LOG))
+	$(NEXTPNR)-$(NEXTPNR_ARCH) --$(DEVICE) --package $(PNR_PACKAGE) --json $(NAME).json --pcf $< --asc $@ \
+		$(call LOG,$(NEXTPNR_LOG))
 
 %.bin: %.asc
 	$(ICEPACK) $< $@ $(call LOG,$(ICEPACK_LOG))
 
 %.rpt: %.asc %.bin
-	$(ICETIME) -d $(DEVICE) -p $(PCF_FILE) -m -t -r $@ $< $(call LOG,$(ICETIME_LOG))
+	$(ICETIME) -d $(DEVICE) -p $(PCF_FILE) -m -t -r $@ $< \
+		$(call LOG,$(ICETIME_LOG))
 	-@$(ECHO)
 	-@$(GREP) -i -e 'Total' $@
 	-@$(GREP) -i -Ee 'Max frequency|Max delay' $(NEXTPNR_LOG)
