--- a/debian/rules
+++ b/debian/rules
@@ -11,8 +11,6 @@ export PYBUILD_DESTDIR_python2=debian/destdir-py2-pyprofibus/
 export PYBUILD_DESTDIR_python2-dbg=debian/destdir-py2-pyprofibus-dbg/
 export PYBUILD_DESTDIR_python3=debian/destdir-py3-pyprofibus/
 export PYBUILD_DESTDIR_python3-dbg=debian/destdir-py3-pyprofibus-dbg/
-export PYBUILD_DESTDIR_pypy=debian/destdir-pypy-pyprofibus/
-export PYBUILD_DESTDIR_pypy-dbg=debian/destdir-pypy-pyprofibus-dbg/
 
 export PYTHONDONTWRITEBYTECODE=1
 export PYTHONPATH=
@@ -20,7 +18,7 @@ export PYTHONSTARTUP=
 export PYTHONINSPECT=
 
 %:
-	dh $@ --with python2,python3,pypy --buildsystem=pybuild
+	dh $@ --with python2,python3 --buildsystem=pybuild
 
 override_dh_auto_test:
 	true
