phy-fpha: Use PLL
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/phy_fpga/Makefile
+++ b/phy_fpga/Makefile
@@ -8,6 +8,7 @@ YOSYS		:= yosys
 NEXTPNR		:= nextpnr
 ICEPACK		:= icepack
 ICETIME		:= icetime
+ICEPLL		:= icepll
 TINYPROG	:= tinyprog
 PYTHON		:= python3
 CAT		:= cat
@@ -23,6 +24,7 @@ TARGET_UPPER	:= $(shell $(PRINTF) '%s' '$(TARGET)' | $(TR) a-z A-Z)
 TOP_FILE	:= main.v
 TOP_MODULE	:= top_module
 PCF_FILE	:= $(TARGET_LOWER).pcf
+PLL_MOD_V_FILE	:= pll_mod.v
 GENERATED_V	:= crc8_func.v
 
 ifeq ($(TARGET_LOWER),tinyfpga_bx)
@@ -43,11 +45,25 @@ LOG		= >$(1) 2>&1 || ( $(CAT) $(1); $(FALSE) )
 .DEFAULT_GOAL := all
 all: $(TARGET_NAME).bin $(TARGET_NAME).rpt
 
+ifeq ($(TARGET_LOWER),tinyfpga_bx)
+CLK_HZ		:= 16000000
+PLL_HZ		:= 24000000
+PLL_MOD_V		:= $(PLL_MOD_V_FILE)
+CLK_MHZ		:= $(shell expr $(CLK_HZ) / 1000000)
+PLL_MHZ		:= $(shell expr $(PLL_HZ) / 1000000)
+$(PLL_MOD_V):
+	$(ICEPLL) -q -f $@ -m -n pll_module -i $(CLK_MHZ) -o $(PLL_MHZ)
+else
+CLK_HZ		:= 16000000
+PLL_HZ		:= 16000000
+PLL_MOD_V		:=
+endif
+
 crc8_func.v: crcgen.py
 	$(PYTHON) crcgen.py --algorithm CRC-8-CCITT --verilog-function --name crc8 > $@
 
-%.blif: $(TOP_FILE) $(wildcard *.v) $(GENERATED_V)
-	$(YOSYS) -p 'read_verilog -DTARGET_$(TARGET_UPPER)=1 $(if $(filter-out 0,$(DEBUG)),-DDEBUG=1) $<' \
+%.blif: $(TOP_FILE) $(wildcard *.v) $(GENERATED_V) $(PLL_MOD_V)
+	$(YOSYS) -p 'read_verilog -DTARGET_$(TARGET_UPPER)=1 -DCLK_HZ=$(CLK_HZ) -DPLL_HZ=$(PLL_HZ) $(if $(filter-out 0,$(DEBUG)),-DDEBUG=1) $<' \
 		-p $(YOSYS_SYNTH_CMD) \
 		$(call LOG,$(YOSYS_LOG))
 
@@ -76,7 +92,7 @@ boot:
 	$(TINYPROG) -b
 
 clean:
-	$(RM) -f *.blif *.json *.asc *.bin *.rpt $(YOSYS_LOG) $(NEXTPNR_LOG) $(ICEPACK_LOG) $(ICETIME_LOG) $(GENERATED_V)
+	$(RM) -f *.blif *.json *.asc *.bin *.rpt $(YOSYS_LOG) $(NEXTPNR_LOG) $(ICEPACK_LOG) $(ICETIME_LOG) $(GENERATED_V) $(PLL_MOD_V_FILE)
 
 .PHONY: all install boot clean
 .PRECIOUS: %.json %.blif %.asc
