conf: Add parameters to examples
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -9,6 +9,7 @@
 
 ; General settings
 [PROFIBUS]
+
 ; Enable/disable debug mode.
 ; 0 -> no debugging.
 ; 1 -> DP debugging.
@@ -18,19 +19,39 @@ debug=0
 
 ; PHY protocol layer configuration
 [PHY]
+
 ; The PHY layer driver type.
+;type=serial
+;type=fpga
 type=dummy_slave
 
+; Only for type=serial:
 ; The PHY device name/path.
-; Can be a device like /dev/ttyS0 or /dev/ttyAMA0 for 'serial'.
-;dev=/dev/ttyS0
+; Can be a device like /dev/ttyS0 or /dev/ttyAMA0
+dev=/dev/ttyS0
 
-; The Profibus on-wire baud rate.
-baud=19200
-
+; Only for type=serial:
 ; Serial line flow control and handshaking
 rtscts=False
 dsrdtr=False
+
+; Only for type=fpga:
+; SPI bus (to PHY FPGA) configuration.
+spiBus=0
+spiCS=0
+spiSpeedHz=2500000
+
+; The Profibus on-wire baud rate.
+;baud=9600
+baud=19200
+;baud=45450
+;baud=93750
+;baud=187500
+;baud=500000
+;baud=1500000
+;baud=3000000
+;baud=6000000
+;baud=12000000
 
 
 ; FDL protocol layer configuration
@@ -39,6 +60,7 @@ dsrdtr=False
 
 ; DP protocol layer configuration
 [DP]
+
 ; The master device class. Either 1 or 2.
 master_class=1
 
@@ -53,6 +75,7 @@ master_addr=2
 
 ; First slave configuration
 [SLAVE_0]
+
 ; This slave's Profibus address
 addr=8
 
@@ -94,6 +117,7 @@ input_size=2
 
 ; Second slave configuration
 [SLAVE_1]
+
 ; This slave's Profibus address
 addr=42
 
