debian: Disable cython build
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,9 @@ export PYTHONPATH=
 export PYTHONSTARTUP=
 export PYTHONINSPECT=
 
+export PYPROFIBUS_CYTHON_BUILD=0
+export PYPROFIBUS_CYTHON_PARALLEL=1
+
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
