Fix module handling for compact slaves
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -80,7 +80,7 @@ master_addr=2
 addr=8
 
 ; The path to the GSD file.
-gsd=dummy.gsd
+gsd=misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
@@ -122,7 +122,7 @@ input_size=2
 addr=42
 
 ; The path to the GSD file.
-gsd=dummy.gsd
+gsd=misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
