--- a/linuxcnc-demo-dummyphy/pyprofibus.conf
+++ b/linuxcnc-demo-dummyphy/pyprofibus.conf
@@ -53,7 +53,7 @@ master_addr=2
 addr=8
 
 ; The path to the GSD file.
-gsd=dummy.gsd
+gsd=misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
