Rename .gse -> .gsd
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_s7-315-2dp.conf
+++ b/example_s7-315-2dp.conf
@@ -80,7 +80,7 @@ master_addr=2
 addr=9
 
 ; The path to the GSD file.
-gsd=sie3802f.gse
+gsd=sie3802f.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=0
