--- a/linuxcnc-demo-et200s/pyprofibus.conf
+++ b/linuxcnc-demo-et200s/pyprofibus.conf
@@ -53,7 +53,7 @@ master_addr=2
 addr=8
 
 ; The path to the GSD file.
-gsd=si03806a.gse
+gsd=si03806a.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
