conf: Add name and index field to slave config
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -76,6 +76,10 @@ master_addr=2
 ; First slave configuration
 [SLAVE_0]
 
+; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
+; pyprofibus does not use the name internally.
+name=first
+
 ; This slave's Profibus address
 addr=8
 
@@ -117,6 +121,10 @@ input_size=2
 
 ; Second slave configuration
 [SLAVE_1]
+
+; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
+; pyprofibus does not use the name internally.
+name=second
 
 ; This slave's Profibus address
 addr=42
