--- a/example_s7_315_2dp.conf
+++ b/example_s7_315_2dp.conf
@@ -76,6 +76,10 @@ master_addr=2
 ; First slave configuration
 [SLAVE_0]
 
+; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
+; pyprofibus does not use the name internally.
+name=s7_315_2dp
+
 ; This slave's Profibus address
 addr=9
 
