--- a/linuxcnc-demo-et200s/pyprofibus.conf
+++ b/linuxcnc-demo-et200s/pyprofibus.conf
@@ -18,6 +18,7 @@ debug=0
 
 ; PHY protocol layer configuration
 [PHY]
+
 ; The PHY layer driver type.
 type=serial
 
@@ -35,6 +36,7 @@ baud=19200
 
 ; DP protocol layer configuration
 [DP]
+
 ; The master device class. Either 1 or 2.
 master_class=1
 
@@ -49,6 +51,11 @@ master_addr=2
 
 ; First slave configuration
 [SLAVE_0]
+
+; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
+; pyprofibus does not use the name internally.
+name=et200s
+
 ; This slave's Profibus address
 addr=8
 
