--- a/example_et200s.conf
+++ b/example_et200s.conf
@@ -76,6 +76,10 @@ master_addr=2
 ; First slave configuration
 [SLAVE_0]
 
+; Optional slave name. Will be stored in slaveConf.name and slaveDesc.name.
+; pyprofibus does not use the name internally.
+name=et200s
+
 ; This slave's Profibus address
 addr=8
 
