linuxcnc-demo-dummyphy: Fix GSD path
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/linuxcnc-demo-dummyphy/pyprofibus.conf
+++ b/linuxcnc-demo-dummyphy/pyprofibus.conf
@@ -60,7 +60,7 @@ name=dummy_slave
 addr=8
 
 ; The path to the GSD file.
-gsd=misc/dummy_modular.gsd
+gsd=../misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
