micropython: Enable watchdog
Signed-off-by: Michael Buesch <m@bues.ch>

--- a/micropython/Makefile
+++ b/micropython/Makefile
@@ -6,7 +6,7 @@ SRCDIR		:= .
 BUILDDIR	:= $(SRCDIR)/build/micropython
 
 MARCH		:= xtensa
-MPYCROSS_OPTS	:=
+MPYCROSS_OPTS	:= -O0
 GSDPARSER_OPTS	:= --dump-strip --dump-notext --dump-noextuserprmdata
 
 MPYCROSS	:= mpy-cross
