--- a/linuxcnc-demo-dummyphy/linuxcnc-demo.ini
+++ b/linuxcnc-demo-dummyphy/linuxcnc-demo.ini
@@ -1,4 +1,5 @@
 [EMC]
+VERSION = 1.1
 MACHINE = linuxcnc-demo
 DEBUG = 0
 
@@ -17,10 +18,6 @@ OPEN_FILE = linuxcnc-demo.ngc
 PROGRAM_EXTENSION = .py Python script
 py = python
 
-[TASK]
-TASK = milltask
-CYCLE_TIME = 0.001
-
 [RS274NGC]
 PARAMETER_FILE = emc.var
 RS274NGC_STARTUP_CODE = G17 G21 G40 G49 G80 G90 G94
@@ -29,23 +26,25 @@ RS274NGC_STARTUP_CODE = G17 G21 G40 G49 G80 G90 G94
 EMCMOT = motmod
 SHMEM_KEY = 111
 COMM_TIMEOUT = 1.0
-COMM_WAIT = 0.010
 BASE_PERIOD = 20000
 SERVO_PERIOD = 1000000
 
+[TASK]
+TASK = milltask
+CYCLE_TIME = 0.001
+
 [HAL]
+HALUI = halui
 HALFILE = linuxcnc-demo.hal
 HALFILE = profibus.hal
 
-HALUI = halui
+[HALUI]
 
 [TRAJ]
-AXES = 3
-COORDINATES = X Y Z
+COORDINATES = XYZ
 LINEAR_UNITS = mm
 ANGULAR_UNITS = degree
-CYCLE_TIME = 0.001
-DEFAULT_VELOCITY = 10.0
+DEFAULT_LINEAR_VELOCITY = 10.0
 MAX_LINEAR_VELOCITY = 30.0
 NO_FORCE_HOMING = 1
 
@@ -54,14 +53,17 @@ EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
 
-[STEPCONF]
-STEPLEN = 1000
-STEPSPACE = 10000
-DIRHOLD = 500
-DIRSETUP = 500
+[KINS]
+KINEMATICS = trivkins coordinates=XYZ
+JOINTS = 3
 
-# X
-[AXIS_0]
+[AXIS_X]
+MIN_LIMIT = -202
+MAX_LIMIT = 2
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 100
+
+[JOINT_0]
 TYPE = LINEAR
 HOME = -100
 MAX_VELOCITY = 20.0
@@ -78,8 +80,13 @@ HOME_IGNORE_LIMITS = NO
 HOME_USE_INDEX = NO
 HOME_SEQUENCE = 1
 
-# Y
-[AXIS_1]
+[AXIS_Y]
+MIN_LIMIT = -202
+MAX_LIMIT = 2
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 100
+
+[JOINT_1]
 TYPE = LINEAR
 HOME = -100
 MAX_VELOCITY = 20.0
@@ -96,8 +103,13 @@ HOME_IGNORE_LIMITS = NO
 HOME_USE_INDEX = NO
 HOME_SEQUENCE = 1
 
-# Z
-[AXIS_2]
+[AXIS_Z]
+MIN_LIMIT = -202
+MAX_LIMIT = 2
+MAX_VELOCITY = 20.0
+MAX_ACCELERATION = 100
+
+[JOINT_2]
 TYPE = LINEAR
 HOME = -50
 MAX_VELOCITY = 20.0
@@ -113,3 +125,9 @@ HOME_LATCH_VEL = 0.5
 HOME_IGNORE_LIMITS = NO
 HOME_USE_INDEX = NO
 HOME_SEQUENCE = 0
+
+[STEPCONF]
+STEPLEN = 1000
+STEPSPACE = 10000
+DIRHOLD = 500
+DIRSETUP = 500
