--- a/example_dummy.conf
+++ b/example_dummy.conf
@@ -117,6 +117,11 @@ output_size=2
 ; This usually depends on the modules plugged into the slave.
 input_size=2
 
+; Request and interpret a slave diagnosis every n Data_Exchange telegrams.
+; n defaults to 0, which means: Never periodically request diagnosis.
+; If periodic diagnosis is switched off, then diagnostic information will only be requested on faults.
+; Note that input-only slaves (output_size=0) probably need a non-zero diag_period.
+diag_period=0
 
 
 ; Second slave configuration
@@ -162,3 +167,9 @@ output_size=2
 ; in Data_Exchange.
 ; This usually depends on the modules plugged into the slave.
 input_size=2
+
+; Request and interpret a slave diagnosis every n Data_Exchange telegrams.
+; n defaults to 0, which means: Never periodically request diagnosis.
+; If periodic diagnosis is switched off, then diagnostic information will only be requested on faults.
+; Note that input-only slaves (output_size=0) probably need a non-zero diag_period.
+diag_period=0
