--- a/examples/example_dummy_twoslaves.conf
+++ b/examples/example_dummy_twoslaves.conf
@@ -84,7 +84,7 @@ name=first
 addr=8
 
 ; The path to the GSD file.
-gsd=misc/dummy_modular.gsd
+gsd=../misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
@@ -135,7 +135,7 @@ name=second
 addr=42
 
 ; The path to the GSD file.
-gsd=misc/dummy_modular.gsd
+gsd=../misc/dummy_modular.gsd
 
 ; Boolean: Sync mode enabled/available?
 sync_mode=1
