--- a/examples/linuxcnc/dummy_phy/linuxcnc-demo.ini
+++ b/examples/linuxcnc/dummy_phy/linuxcnc-demo.ini
@@ -16,7 +16,7 @@ OPEN_FILE = linuxcnc-demo.ngc
 
 [FILTER]
 PROGRAM_EXTENSION = .py Python script
-py = python
+py = python3
 
 [RS274NGC]
 PARAMETER_FILE = emc.var
