--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Michael Buesch <m@bues.ch>
 Section: python
 Priority: optional
 Build-Depends: dh-python,
-               python3-all-dev (>= 3.7),
+               python3-dev (>= 3.7),
                python3-setuptools,
                debhelper (>= 10)
 Standards-Version: 4.5.1
